# wisex

./: .gitignore  404.html  README.md  index.html  meta.yaml  pyproject.toml  setup.py  versiontest.py
.github/workflows/: build.yml  conda.yml  docs.yml
docs/: mkdocs.yml
docs/docs/: index.md
examples/: beh2.py  benzene.py  bh3.py  ch4.py  ethylene.py
search/: search_index.json
tests/: test.py  test_version.py
visualization/: README.md  manim.cfg  rotation.txt  rotation_3d.py
wisex/: __init__.py  geodesic.py  localizer.py  plotter.py
wisex/localization/: fosterboys.py
